posiGen_FullsendBox/src/objects/Sub_Folder__c.object
<CustomObject>
    <fields>
        <fullName>CF_Box_Folder_Id__c</fullName>
        <externalId>true</externalId>
        <label>Box Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Sub Folders</relationshipLabel>
        <relationshipName>Sub_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sub Folders</relationshipLabel>
        <relationshipName>Child_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sub Folder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>